--- a/responsive.css
+++ b/responsive.css
@@ -74,6 +74,9 @@ margin-left: 20px;
 .choose-item1{
     width: 290px !important;
 }
+iframe{
+    width: 300px;
+}
 }
 
 @media screen and (min-width:576px) and (max-width:960px){
