--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@ nav li a{
     color: #FF5400; 
 }
 /* banner start */
+ select{
+    border: none;
+    outline: none;
+}
 #banner{
     padding: 50px 0;
     align-items: center;
